Fix spacing

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -13,6 +13,12 @@ main > section > article {
   max-width: 42em;
 }
 
+main > section > article:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 @media screen and (min-width: 1024px) {
   main > section {
 	flex-direction: row;
@@ -35,9 +41,6 @@ main > section > article {
 
   main > section > article:nth-child(2) {
 	flex: 1;
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
   }
 
 }
